--- a/src/app/userform/userform.component.html
+++ b/src/app/userform/userform.component.html
@@ -10,13 +10,15 @@
         <div class = "form-group">
             <label>NAME</label>
             <input type = "text" formControlName = "name"  class = "form-control">
-            
+                 <span  *ngIf = "!signup.get('name').valid && signup.get('name').touched">
+                      FILL THE NAME </span>
             </div>
         
         <div class = "form-group">
             <label>EMAIL</label>
-            <input type  = "email" class = "form-control" formControlName = "email">
-            
+            <input type  = "email" class = "form-control" formControlName = "email" #e>
+             <span  *ngIf = "!signup.get('email').valid && signup.get('email').touched"> 
+             EMAIL IS REQUIRED              </span>
             </div>
             
             <div class = "form-group">
@@ -42,9 +44,20 @@
             <input type = "radio"  formControlName = "user" value = "contact">
             <label>CONTACTUSER  </label>
             </div>
+        
+            <div>
+                 <span class =  "help-block" *ngIf = "signup.touched"> 
+                 FILL THE REQUIRED FIELDS
+                 </span>
+                </div>
     
             <div class = "form-group">
-                <button type = "submit" class = "btn btn-primary" >SUBMIT</button>
+                   
+                <button type = "submit" class = "btn btn-primary" *ngIf = "signup.valid" >SUBMIT</button>
+                <button type = "button" class = "btn btn-primary" *ngIf = "!signup.valid" (click) = "alertfun()">SUBMIT</button>
+              
+                
+                
                 </div>
     
     </form>
