--- a/src/app/userform/userform.component.html
+++ b/src/app/userform/userform.component.html
@@ -10,14 +10,14 @@
         <div class = "form-group">
             <label>NAME</label>
             <input type = "text" formControlName = "name"  class = "form-control">
-                 <span  *ngIf = "!signup.get('name').valid && signup.get('name').touched">
+                 <span  *ngIf = "!signup.get('name').valid && signup.get('name').touched" class = "help-block">
                       FILL THE NAME </span>
             </div>
         
         <div class = "form-group">
             <label>EMAIL</label>
             <input type  = "email" class = "form-control" formControlName = "email" #e>
-             <span  *ngIf = "!signup.get('email').valid && signup.get('email').touched"> 
+             <span  *ngIf = "!signup.get('email').valid && signup.get('email').touched" class = "help-block"> 
              EMAIL IS REQUIRED              </span>
             </div>
             
