--- a/src/app/auth/register/register.component.css
+++ b/src/app/auth/register/register.component.css
@@ -4,3 +4,15 @@
     background-color: grey;
     margin-top: 5em;
 }
+
+span {
+    color : red;
+}
+
+change{
+    color: black ;
+}
+
+def{
+    color: yellow ;
+}
