--- a/src/app/navs/navs.component.html
+++ b/src/app/navs/navs.component.html
@@ -10,7 +10,7 @@
       <li class="active"><a routerLink = "home">Home</a></li>
       <li><a routerLink = "admin">ADMIN</a></li>
       <li><a routerLink = "forms">FORM</a></li>
-      
+      <li><a routerLink = "admin/GROUP">GROUP</a></li>  
     </ul>
     
     
