--- a/src/app/admin/admindetails/admindetails.component.html
+++ b/src/app/admin/admindetails/admindetails.component.html
@@ -75,7 +75,7 @@
             
                 <div class = "form-group" style = "text-align : center">
                     <button type = "submit" class= "btn btn-primary" *ngIf = "!det.mark">SUBMIT</button>
-            <a  class = "btn btn-primary" 
+            <a [routerLink] = "['/admin' , 'GROUP']"  [queryParams] = "{allow : '0'}" class = "btn btn-primary" 
             *ngIf = "det.mark" (click) = "onget()" >VIEW ASSIGNED GROUP</a>    
                     </div>
                     
