--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -8,10 +8,25 @@
             </div>
         </div>
 
+
+    <div class = "row">
+        <div class = "col-xs-12">
+                <input type = "text" placeholder = "SEARCH BY NAME" class = "form-control" style = "margin-top : 1em;" 
+                 [(ngModel)]  = "name">
+            </div>
+        </div>
+
+
+
 <div class  = "row">
 
-<a  [routerLink] = "['/admin' , i]"  *ngFor = "let item of userdata ; let i = index" class = "col-lg-5 col-md-5 col-sm-5 col-xs-12">
+
+
+<a  [routerLink] = "['/admin' , i]"  *ngFor = "let item of userdata | search  : name ; 
+let i = index" 
+class = "col-lg-5 col-md-5 col-sm-12 col-xs-12" >
                     
+                   
     <h5> NAME : {{item.name | uppercase}} </h5>
     <h5> ADDRESS : {{item.address}} </h5>
     <h5> EMAIL : {{item.email}} </h5>
@@ -19,6 +34,7 @@
     <h5> USER : {{item.user}} </h5>
     <br>
     <h6 > APPLYON :   {{item.date}} </h6>
+    
 </a>
 
 </div>
