--- a/src/app/group/group.component.html
+++ b/src/app/group/group.component.html
@@ -36,12 +36,12 @@
                 
                 <div class = "col-lg-3 col-md-3 col-sm-6 col-xs-12">
             
-            <a [routerLink] = "['/admin' , 'GROUP' , 'groupA']"  [queryParams] = "{ allow : true }" >
+            <a [routerLink] = "['/admin' , 'GROUP' , 'groupB']"  [queryParams] = "{ allow : true }" >
                 
                 
                     <table class="table  table-striped">
-                        <h2>GROUP A</h2>
-                <div *ngFor = "let item of groupA">
+                        <h2>GROUP B</h2>
+                <div *ngFor = "let item of groupB">
                 <tr class = "table-striped">
                     <td> <label> {{item.name | uppercase}}           ({{item.assign}}) </label></td>
                     
@@ -54,12 +54,12 @@
                     
                     <div class = "col-lg-3 col-md-3 col-sm-6 col-xs-12">
             
-            <a [routerLink] = "['/admin' , 'GROUP' , 'groupA']"  [queryParams] = "{ allow : true }" >
+            <a [routerLink] = "['/admin' , 'GROUP' , 'groupC']"  [queryParams] = "{ allow : true }" >
                 
                 
                     <table class="table  table-striped">
-                        <h2>GROUP A</h2>
-                <div *ngFor = "let item of groupA">
+                        <h2>GROUP C</h2>
+                <div *ngFor = "let item of groupC">
                 <tr class = "table-striped">
                     <td> <label> {{item.name | uppercase}}           ({{item.assign}}) </label></td>
                     
@@ -72,12 +72,12 @@
                     
                     <div class = "col-lg-3 col-md-3 col-sm-6 col-xs-12">
             
-            <a [routerLink] = "['/admin' , 'GROUP' , 'groupA']"  [queryParams] = "{ allow : true }" >
+            <a [routerLink] = "['/admin' , 'GROUP' , 'groupD']"  [queryParams] = "{ allow : true }" >
                 
                 
                     <table class="table  table-striped">
-                        <h2>GROUP A</h2>
-                <div *ngFor = "let item of groupA">
+                        <h2>GROUP D</h2>
+                <div *ngFor = "let item of groupD">
                 <tr class = "table-striped">
                     <td> <label> {{item.name | uppercase}}           ({{item.assign}}) </label></td>
                     
