--- a/src/app/userform/userform.component.html
+++ b/src/app/userform/userform.component.html
@@ -4,8 +4,26 @@
     
     
     <div class = "row">
-        <div class = "col-lg-6 offset-lg-3 col-sm-12">
+        <div class = "col-xs-12">
+            
+            <div class = "back">
+            <div class = "front">
+                <h1 style= "color: white ; text-align : center">WELCOME TO FORM SECTION</h1>
+            <h3 style= "color: white ; text-align : center">ENTER THE REQUIRED DETAILS</h3>
+                </div>
+                </div>
+            
+
+            </div>
+        </div>
     
+    <hr>
+    
+    <div class = "row">
+        <div class = "col-lg-12 offset-lg-6 col-sm-12 col-xs-12">
+            
+            <div class = "for">
+
     <form [formGroup] = "signup"  (ngSubmit) = "onclick()" >
         <div class = "form-group">
             <label>NAME</label>
@@ -53,15 +71,16 @@
     
             <div class = "form-group">
                    
+                   <div style = "text-align : center">
                 <button type = "submit" class = "btn btn-primary" *ngIf = "signup.valid" >SUBMIT</button>
                 <button type = "button" class = "btn btn-primary" *ngIf = "!signup.valid" (click) = "alertfun()">SUBMIT</button>
-              
+              </div>
                 
                 
                 </div>
     
     </form>
-    
+    </div>
     </div>
     </div>
     </div>
